kubernetes/traefik-helm/2api.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: u2212-tainguyenapi-deployment
spec:
  selector:
    matchLabels:
      app: tainguyenapi
  replicas: 1
  template:
    metadata:
      labels:
        app: tainguyenapi
    spec:
      containers:
        - name: tainguyen
          image: dockerhub.dttt.vn/dtc/tainguyen.api:5.1
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      imagePullSecrets:
      - name: dockerhubdtttvn
---
apiVersion: v1
kind: Service
metadata:
  name: tainguyenapiservice
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: tainguyenapi
