kubernetes/traefik-helm/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: test-stripprefixregex
spec:
  stripPrefixRegex:
    regex:
      - "$$|/.*"
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: stripprefix
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - /blue
      - /green
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: k8s-example
  namespace: default

spec:
  entryPoints:
    - web

  routes:
  - match: Host(`nginx.example.site`) && PathPrefix(`/blue{regex:$|/.*}`)
    kind: Rule
    services:
    - name: blue-nginx-service
      port: 80
    middlewares:
      - name: stripprefix
        namespace: default

  - match: Host(`nginx.example.site`) && PathPrefix(`/green{regex:$|/.*}`)
    kind: Rule
    services:
    - name: green-nginx-service
      port: 80
    middlewares:
      - name: stripprefix
        namespace: default
